Implementation of buttons and their logic, changed GIF, removed the gap of the VBox and StackPane, made it so that the runners start on the starting point

--- a/src/assignment2_edrictran/MarathonFXML.fxml
+++ b/src/assignment2_edrictran/MarathonFXML.fxml
@@ -18,8 +18,8 @@
    <bottom>
       <VBox fx:id="controlsVBox" prefHeight="54.0" prefWidth="800.0" BorderPane.alignment="CENTER_LEFT">
          <children>
-            <Label fx:id="greetingLabel" style="-fx-font-size: 16; -fx-font-weight: bold;" text="Welcome to the Marathon Simulator!" />
-            <Label fx:id="runnerInfoLabel" />
+            <Label fx:id="greetingAndStatusLabel" style="-fx-font-size: 16; -fx-font-weight: bold;" text="Welcome to the Marathon Simulator!" />
+            <Label fx:id="runnerInfoAndExtraInfoLabel" />
          </children>
          <padding>
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
